Fix text overflow in File Metadata Microservice

--- a/Apis_And_Microservices_Certification/File_Metadata_Microservice/style.css
+++ b/Apis_And_Microservices_Certification/File_Metadata_Microservice/style.css
@@ -19,7 +19,6 @@ form > * {
   color: white;
   cursor: pointer;
   margin: 1rem;
-  text-align: center;
 }
 button, input[type=submit] {
   background-color: #d34a00;
@@ -41,6 +40,12 @@ footer {
 }
 footer a {
   color: #7a2e04;
+}
+
+@media only screen and (min-width: 576px) {
+  form > * {
+    text-align: center;
+  }
 }
 
 @media only screen and (min-width: 992px) {
